--- a/modules/ROOT/partials/confluent-cloud-add-plugin.adoc
+++ b/modules/ROOT/partials/confluent-cloud-add-plugin.adoc
@@ -2,12 +2,9 @@
 
 === {type-text}
 
-. Select the cluster you want to install the connector into, open `Connector` section and click `Add plugin`, as shown in <<connectors-add-plugin-{type}>>.
-+
-.Connector plugins
-image::confluent-cloud/cc-connectors-initial.png[width=800,id=connectors-add-plugin-{type}]
+. Select the cluster you want to install the connector into, open `Connectors` section and click `Add plugin`.
 
-. Click `Add Plugin` and fill in details for the new custom connector as shown below and <<connectors-upload-{type}>>, accept conditions and click `Submit`.
+. Click `Add Plugin` and fill in details for the new custom connector as shown below, accept conditions and click `Submit`.
 +
 Connector plugin name:: Neo4j Connector for Confluent {type-text}
 Custom plugin description:: Neo4j Connector for Confluent {type-text} plugin as a custom connector.
@@ -20,9 +17,6 @@ Sensitive properties:: In order for sensitive configuration properties to be pro
     neo4j.authentication.kerberos.ticket
     neo4j.authentication.bearer.token
     neo4j.authentication.custom.credentials
-
-.Add Custom Connector for {type-text} plugin
-image::confluent-cloud/cc-connectors-upload-{type}.png[width=800,id=connectors-upload-{type}]
 
 It will upload the archive and create the {type-text} plugin.
 
