--- a/modules/ROOT/pages/known-issues.adoc
+++ b/modules/ROOT/pages/known-issues.adoc
@@ -4,4 +4,6 @@
 
 == 5.1.0-rc01
 
-As of 5.1.0-rc01, {product-name} does not have any known issues.
+* Source connector with CDC strategy is being killed when it receives a change event that contains an update of type for a property.
+An example of such a change is when a node that has a property named `age` was set to a string value of `"25"`, but updated to be an `int` value of `25`.
+Change events with this condition will break schema derivation in the connector and a fix is being implemented to address this.
