--- a/modules/ROOT/pages/quickstart-confluent-cloud.adoc
+++ b/modules/ROOT/pages/quickstart-confluent-cloud.adoc
@@ -38,83 +38,67 @@ You can create a connector from Confluent Cloud to Neo4j and link:https://neo4j.
 
 Having created our custom connectors in the previous section, we can now start configuring our Source instance.
 
-. In Confluent Cloud, go to Connectors section for your cluster and search for plugin `Neo4j Connector for Confluent Source` which we have created in xref:upload-connector-source[above], as shown in <<find-source-connector>>.
-+
-[[find-source-connector]]
-.Find custom Source connector
-image::confluent-cloud/cc-connectors-source.png[width=800]
+. In Confluent Cloud, go to Connectors section for your cluster and search for plugin `Neo4j Connector for Confluent Source` which we have created in xref:upload-connector-source[above].
 
 . Click on the connector to start configuring our source connector instance.
 
 . Configure an API Key for accessing your Kafka cluster, and click Continue.
-+
-[[configure-source-connector-api-key]]
-.Configure API Key
-image::confluent-cloud/cc-connectors-source-api-key.png[width=800]
 
 . First click `Auto Configure Schema Registry` and select either of `JSON Schema`, `Avro` or `Protobuf` based on your preferences, and click `Apply changes`.
 This will generate a couple of configuration options for schema support.
 Next, configure the connector configuration options either as individual key value pairs or adding into the existing JSON.
 For quickstart, we will configure our source instance so that it will send change event messages on nodes matching pattern `(:TestSource)` over to the topics named `creates`, `updates` and `deletes`, using your preferred serialization format.
 +
+[.tabbed-example]
+====
+[.include-with-AVRO-messages]
+=====
+ifdef::backend-pdf[]
+.quickstart.confluent-cloud.source.cdc.avro.json
+endif::[]
 [source,json]
 ----
-{
-  "confluent.custom.schema.registry.auto": "true",
-  "key.converter": "io.confluent.connect.avro.AvroConverter", //<1>
-  "value.converter": "io.confluent.connect.avro.AvroConverter", //<2>
-  "neo4j.uri": "neo4j+s://<redacted>.databases.neo4j.io",
-  "neo4j.authentication.type": "BASIC",
-  "neo4j.authentication.basic.username": "neo4j",
-  "neo4j.authentication.basic.password": "<redacted>",
-  "neo4j.source-strategy": "CDC",
-  "neo4j.start-from": "NOW",
-  "neo4j.cdc.poll-interval": "1s",
-  "neo4j.cdc.topic.creates.patterns.0.pattern": "(:TestSource)",
-  "neo4j.cdc.topic.creates.patterns.0.operation": "CREATE",
-  "neo4j.cdc.topic.updates.patterns.0.pattern": "(:TestSource)",
-  "neo4j.cdc.topic.updates.patterns.0.operation": "UPDATE",
-  "neo4j.cdc.topic.deletes.patterns.0.pattern": "(:TestSource)",
-  "neo4j.cdc.topic.deletes.patterns.0.operation": "DELETE"
-}
+include::example$docker-data/quickstart.confluent-cloud.source.cdc.avro.json[]
 ----
+=====
 
-<1> Might be different based on your selected Key Converter type.
-<2> Might be different based on your selected Value Converter type.
+[.include-with-JSON-messages-with-schema]
+=====
+ifdef::backend-pdf[]
+.quickstart.confluent-cloud.source.cdc.json.json
+endif::[]
+[source,json]
+----
+include::example$docker-data/quickstart.confluent-cloud.source.cdc.json.json[]
+----
+=====
+
+[.include-with-PROTOBUF-messages]
+=====
+ifdef::backend-pdf[]
+.quickstart.confluent-cloud.source.cdc.protobuf.json
+endif::[]
+[source,json]
+----
+include::example$docker-data/quickstart.confluent-cloud.source.cdc.protobuf.json[]
+----
+=====
+
+====
 +
 Verify that all your configuration options are correct, and click `Continue`.
-+
-[[configure-source-connector-configure]]
-.Configure Instance
-image::confluent-cloud/cc-connectors-source-configure.png[width=800]
 
 . At the next screen, we need to add connection endpoints so that our connector can access Neo4j or AuraDB.
 Extract your hostname and port from Neo4j Connection URI, and add it as an endpoint.
 Remember that default port number for Neo4j connections is `7687`.
 For example, for connection URI `neo4j+s://<redacted>.databases.neo4j.io` we should enter `<redacted>.databases.neo4j.io:7687` as an endpoint.
-+
-[[configure-source-connector-endpoint]]
-.Configure Endpoints
-image::confluent-cloud/cc-connectors-source-endpoint.png[width=800]
 
 . Next, select how many tasks your connector should run with and click `Continue`.
 Source connectors always run with 1 task, so the default value of `1` would be enough.
-+
-[[configure-source-connector-task]]
-.Configure Tasks
-image::confluent-cloud/cc-connectors-source-tasks.png[width=800]
 
 . Finally, name your connector instance, review your settings and click `Continue`.
-+
-[[configure-source-connector-review]]
-.Review
-image::confluent-cloud/cc-connectors-source-review.png[width=800]
 
 . The source instance will be provisioned and will be shown as `Running` in a couple of minutes.
-+
-[[configure-source-connector-provision]]
-.Review
-image::confluent-cloud/cc-connectors-source-provision.png[width=800]
 
 Now that you have a running source instance, you can create the following nodes in Neo4j:
 
@@ -131,82 +115,66 @@ This will result in new messages being published to the topic named `creates`.
 
 Having created our Source instance in the previous section, we can now start configuring our Sink instance so that we can act upon messages generated by our Source instance.
 
-. In Confluent Cloud, go to Connectors section for your cluster and search for plugin `Neo4j Connector for Confluent Sink` which we have created in xref:upload-connector-sink[above], as shown in <<find-sink-connector>>.
-+
-[[find-sink-connector]]
-.Find custom Sink connector
-image::confluent-cloud/cc-connectors-sink.png[width=800]
+. In Confluent Cloud, go to Connectors section for your cluster and search for plugin `Neo4j Connector for Confluent Sink` which we have created in xref:upload-connector-sink[above].
 
 . Click on the connector to start configuring our sink connector instance.
 
 . Configure an API Key for accessing your Kafka cluster, and click Continue.
-+
-[[configure-sink-connector-api-key]]
-.Configure API Key
-image::confluent-cloud/cc-connectors-sink-api-key.png[width=800]
 
 . First click `Auto Configure Schema Registry` and select either of `JSON Schema`, `Avro` or `Protobuf` based on your preferences, and click `Apply changes`.
 This will generate a couple of configuration options for schema support.
 Next, configure the connector configuration options either as individual key value pairs or adding into the existing JSON.
 For quickstart, we will configure our sink instance so that it will execute a Cypher statement for each message received from the topics named `creates`, `updates` and `deletes`.
 +
+[.tabbed-example]
+====
+[.include-with-AVRO-messages]
+=====
+ifdef::backend-pdf[]
+.quickstart.confluent-cloud.sink.cypher.avro.json
+endif::[]
 [source,json]
 ----
-{
-  "confluent.custom.schema.registry.auto": "true",
-  "key.converter": "io.confluent.connect.avro.AvroConverter", //<1>
-  "value.converter": "io.confluent.connect.avro.AvroConverter", //<2>
-  "topics": "creates,updates,deletes",
-  "neo4j.uri": "neo4j+s://<redacted>.databases.neo4j.io",
-  "neo4j.authentication.type": "BASIC",
-  "neo4j.authentication.basic.username": "neo4j",
-  "neo4j.authentication.basic.password": "<redacted>",
-  "neo4j.cypher.topic.creates": "WITH __value.event.state.after AS state MERGE (p:Person {name: state.properties.name, surname: state.properties.surname}) MERGE (f:Family {name: state.properties.surname}) MERGE (p)-[:BELONGS_TO]->(f)",
-  "neo4j.cypher.topic.updates": "WITH __value.event.state.before AS before, __value.event.state.after AS after MATCH (p:Person {name: before.properties.name, surname: before.properties.surname}) MATCH (fPre:Family {name: before.properties.surname}) OPTIONAL MATCH (p)-[b:BELONGS_TO]->(fPre) DELETE b WITH after, p SET p.name = after.properties.name, p.surname = after.properties.surname MERGE (f:Family {name: after.properties.surname}) MERGE (p)-[:BELONGS_TO]->(f)",
-  "neo4j.cypher.topic.deletes": "WITH __value.event.state.before AS before MATCH (p:Person {name: before.properties.name, surname: before.properties.surname}) DETACH DELETE p",
-  "neo4j.cypher.bind-timestamp-as": "",
-  "neo4j.cypher.bind-header-as": "",
-  "neo4j.cypher.bind-key-as": "",
-  "neo4j.cypher.bind-value-as": "__value",
-  "neo4j.cypher.bind-value-as-event": "false"
-}
+include::example$docker-data/quickstart.confluent-cloud.sink.cypher.avro.json[]
 ----
-+
-<1> Might be different based on your selected Key Converter type.
-<2> Might be different based on your selected Value Converter type.
+=====
+
+[.include-with-JSON-messages-with-schema]
+=====
+ifdef::backend-pdf[]
+.quickstart.confluent-cloud.sink.cypher.json.json
+endif::[]
+[source,json]
+----
+include::example$docker-data/quickstart.confluent-cloud.sink.cypher.json.json[]
+----
+=====
+
+[.include-with-PROTOBUF-messages]
+=====
+ifdef::backend-pdf[]
+.quickstart.confluent-cloud.sink.cypher.protobuf.json
+endif::[]
+[source,json]
+----
+include::example$docker-data/quickstart.confluent-cloud.sink.cypher.protobuf.json[]
+----
+=====
+
+====
 +
 Verify that all your configuration options are correct, and click `Continue`.
-+
-[[configure-sink-connector-configure]]
-.Configure Instance
-image::confluent-cloud/cc-connectors-sink-configure.png[width=800]
 
 . At the next screen, we need to add connection endpoints so that our connector can access Neo4j or AuraDB.
 Extract your hostname and port from Neo4j Connection URI, and add it as an endpoint.
 Remember that default port number for Neo4j connections is `7687`.
 For example, for connection URI `neo4j+s://<redacted>.databases.neo4j.io` we should enter `<redacted>.databases.neo4j.io:7687` as an endpoint.
-+
-[[configure-sink-connector-endpoint]]
-.Configure Endpoints
-image::confluent-cloud/cc-connectors-sink-endpoint.png[width=800]
 
 . Next, select how many tasks your connector should run with and click `Continue`.
-+
-[[configure-sink-connector-tasks]]
-.Configure Tasks
-image::confluent-cloud/cc-connectors-sink-tasks.png[width=800]
 
 . Finally, name your connector instance, review your settings and click `Continue`.
-+
-[[configure-sink-connector-review]]
-.Review
-image::confluent-cloud/cc-connectors-sink-review.png[width=800]
 
 . The sink instance will be provisioned and will be shown as `Running` in a couple of minutes.
-+
-[[configure-sink-connector-provision]]
-.Provision
-image::confluent-cloud/cc-connectors-sink-provision.png[width=800]
 
 == Testing It Out
 
@@ -259,3 +227,7 @@ Typically, our connector is used as either a sink when pulling data from other d
 - Make sure you have CDC enabled on your database.
 - Make sure you have set the connection endpoints correctly as specified above.
 - Check logs for the connector.
+
+[WARNING]
+Please note that custom connector logs in Confluent Cloud appear do not appear immediately, but with a delay.
+It might be useful to keep this in mind while testing out configuration changes on the connector instance.
