--- a/modules/ROOT/pages/sink/cud.adoc
+++ b/modules/ROOT/pages/sink/cud.adoc
@@ -49,7 +49,8 @@ a| The operation type.
 One of `create`, `merge`, `update` or `delete`.
 
 [NOTE]
-Delete messages are for **individual nodes** it’s not intended to be a generic way of doing cypher query building from JSON
+The `delete` operation is for **individual nodes** only.
+It is not intended to run generic Cypher queries from JSON.
 
 | properties
 | label:Optional[] when operation is `delete`.
